@@ -22,6 +22,7 @@ SingleR(
   quantile = 0.8,
   fine.tune = TRUE,
   tune.thresh = 0.05,
+  fine.tune.combined = fine.tune,
   prune = TRUE,
   assay.type.test = "logcounts",
   assay.type.ref = "logcounts",
@@ -63,7 +64,7 @@ If set, annotation is performed on the aggregated cluster profiles, otherwise it
 \item{restrict}{A character vector of gene names to use for marker selection.
 By default, all genes in \code{ref} are used.}
 
-\item{quantile, fine.tune, tune.thresh, prune}{Further arguments to pass to \code{\link{classifySingleR}}.}
+\item{quantile, fine.tune, tune.thresh, fine.tune.combined, prune}{Further arguments to pass to \code{\link{classifySingleR}}.}
 
 \item{assay.type.test}{An integer scalar or string specifying the assay of \code{test} containing the relevant expression matrix,
 if \code{test} is a \link[SummarizedExperiment]{SummarizedExperiment} object.}
